--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,14 @@
     -->
     <title>React App</title>
 
+
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+
+
 
   </head>
   <body>
